tests/fail/0001_constant2.ec
cnst c3 : _ = [<:int, int>]. 
